# ai-recruiter-agent

./: .gitignore  authentication.py  database.py  download_cv.py  pyproject.toml
models/: analysis.py  file.py  job.py  resume.py
