[project]
name = "recruitment-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayrton Souza",email = "me@ayrtonsouza.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "google-api-python-client (>=2.160.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "tinydb (>=4.8.2,<5.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
